--- a/server/pom.xml
+++ b/server/pom.xml
@@ -102,9 +102,11 @@
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
 <!--		end of important   -->
-
-
-
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-devtools</artifactId>
+				<optional>true</optional>
+			</dependency>
 	</dependencies>
 
 	<build>
